# s2-robot-code

./: README.md  README_standalone.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  adafruit_Pca_example.py  arm_code_idea.md  example_moteus_swerve.py  go-to-position.md  imu_test.py  intermediate_trajectory_at_velocity.md  main.py  mecanum_drive.py  power_dist_board_example.py  pygame_controller_probe.py  pyproject.toml  servo_tuner.py  standalone_drivetrain.py  state-machine-impl.md  test_standalone_arm.py  test_standalone_drivetrain.py
driver-station/: README.md  requirements.txt  rerun_adapters.py
driver-station/config/: config.yaml
driver-station/nodes/: arm_offset_ui_node.py  battery_alarm.py  goto_node.py  rerun_viz.py  robot_odometry.py  teleop_node.py
robot-code/: arm_controller.py  mecanum_drive.py  moteus_hardware.py  standalone_drivetrain.py
robot-code/config/: config.yaml
robot-code/nodes/: drivetrain.py  imu_node.py  wrist_node.py
tests/: test_trajectory_generator.py
trajectory_testing/: __init__.py  generator.py  trajectory_generator_idea.md  visualize_trajectory.py
