[project]
name = "rival-s2-robot-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tide-sdk>=0.1.8",
]

[project.optional-dependencies]
laptop = [
    "pygame>=2.6.1",
]
robot = [
    "moteus-pi3hat>=0.3.31",
    "adafruit-circuitpython-bno055>=5.4.20",
    "RPi.GPIO>=0.7.1",
]
