[project]
name = "rival-s2-robot-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "pytest>=8.4.1",
    "tide-sdk",
]

[project.optional-dependencies]
laptop = [
    "pygame>=2.6.1",
]
robot = [
    "moteus-pi3hat>=0.3.31",
    "adafruit-circuitpython-bno055>=5.4.20",
    "RPi.GPIO>=0.7.1",
]

[tool.uv.sources]
tide-sdk = { git = "https://github.com/NorthCarolinaRivalRobotics/tide.git" }
